feat:修复模型管理的绑定更换bug，继续开发工作流方案 模型能力只按模型自身 provider 校验，HappyHorse 切换百炼账户不再被套用 Qwen 文本能力。 后端增加同厂商账户绑定校验，拒绝跨厂商绑定。 可灵账户编辑留空会保留既有 extraAuthJson，不再误发清除标志。 厂商账户弹窗已删除“账号级代理策略”和“代理地址”，历史字段保持兼容。 GPT Image 2 现在同时提交 aspectRatio、imageRatio 和动态表单原始键 size/imageSize/image_size，Worker 会正确转换成 OpenAI size